# web-scraping-tutorial

./: README.md  advanced-web-scraping.slides.html  index.html  pyproject.toml
code_examples/: selenium_scraping.py
css/: styles.css
data/: gdp-data.csv  index.html  web-scraping-resources.json
sample_code/: api_requests.py  requests_bs4_scraping.py
slides/: advanced-web-scraping.ipynb  icons_for_slides.pptx
slides_content/: advanced-web-scraping.ipynb
src/: advanced-web-scraping.ipynb  advanced-web-scraping.slides.html  slides.ipynb  slides.slides.html
web_content/data/: web-scraping-resources.json
