[tool.poetry]
name = "advanced-web-scraping"
version = "0.1.0"
description = ""
authors = ["Lorae Stojanovic <stojanovic.lorae@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbconvert = "^7.16.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
